# reproducible-ml-pipeline

./: .gitignore  README.md  pyproject.toml
.dvc/: config
data/: raw.dvc
