[tool.poetry]
name = "reproducible-ml-pipeline"
version = "0.1.0"
description = "This repository demonstrates a reusable ML experimentation pipeline."
authors = ["sh99"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dvc = "^3.63.0"
mlflow = "^3.3.2"
xgboost = "^3.0.5"
ipykernel = "^6.30.1"
scikit-learn = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
